--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                             </div>
                             <div class="timeline-body"><p class="text-muted">
                             <p>  南港站 <a href="coppii.html" target="_parent">Coppii Lumii Living Coffee</a></p>
-                            <p>  南港站 <a href="coppii.html" target="_parent">Coppii Lumii Living Coffee</a></p>
+                            <p>  土城站 <a href="antler.html" target="_parent">Antler Park 路角公園</a></p>
                             </p></div>
                         </div>
                     </li>
@@ -186,6 +186,7 @@
                             </div>
                             <div class="timeline-body"><p class="text-muted">
                             <p>  昆陽站 <a href="backmount.html" target="_parent">Back Mount 後山咖啡</a></p>
+                            <p>  江子翠站 <a href="koya.html" target="_parent">Koya Cafe</a></p>
                             </p></div>
                         </div>
                     </li>
@@ -197,8 +198,9 @@
                             </div>
                             <div class="timeline-body"><p class="text-muted">
                             <p>  昆陽站 <a href="unclestwo.html" target="_parent">Uncles Two 兩位大叔</a></p>
-                            <p>  國父紀念館站 <a href="drunk.html" target="_parent">Drunk Cafe 爛醉咖啡</a>
-                            </p></div>
+                            <p>  國父紀念館站 <a href="drunk.html" target="_parent">Drunk Cafe 爛醉咖啡</a></p>
+                            <p>  海山站 <a href="sdessert.html" target="_parent">S'Dessert BAR</a></p>
+                            </div>
                         </div>
                     </li>
                     <li>
@@ -379,7 +381,8 @@
                                     <!-- Project Details Go Here-->
                                     <h3 class="text-uppercase">信義-萬華</h2>
                                     <p class="item-intro text-muted">捷運國父紀念館站-捷運台北車站</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/----.jpg" alt="..." />
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/02thum.jpeg" alt="..." />
+                                    <p>本月精選 - Boven Cafe 雜誌圖書館</p>
                                     <div>
                                     <h4>國父紀念館站</h4>
                                     <p>  <a href="aruchuu.html" target="_parent">Aruchuu 麓鳩</a></p>
@@ -433,7 +436,8 @@
                                     <!-- Project Details Go Here-->
                                     <h3 class="text-uppercase">萬華-板橋</h2>
                                     <p class="item-intro text-muted">捷運西門站-捷運府中站</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/---.jpg" alt="..." />
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/03thum.jpeg" alt="..." />
+                                    <p>本月精選 - Cafe Noote</p>
                                     <div>
                                     <h4>西門站</h4>
                                     <p>  <a href="shang.html" target="_parent">上上咖啡</a></p>
@@ -487,6 +491,7 @@
                                     <h3 class="text-uppercase">板橋-土城</h2>
                                     <p class="item-intro text-muted">捷運亞東醫院站-捷運頂埔站</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/---.jpg" alt="..." />
+                                    <p>本月精選 - Antler Park 路角公園</p>
                                     <div>
                                     <h4>亞東醫院站</h4>
                                     <p>努力開發中...</p>
