--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
                                     <h3 class="text-uppercase">信義-萬華</h2>
                                     <p class="item-intro text-muted">捷運國父紀念館站-捷運台北車站</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/02thum.jpeg" alt="..." />
-                                    <p>本月精選 - Boven Cafe 雜誌圖書館</p>
+                                    <p>本月精選 - Boven Cafe 雜誌圖書館（忠孝復興站）</p>
                                     <div>
                                     <h4>國父紀念館站</h4>
                                     <p>  <a href="aruchuu.html" target="_parent">Aruchuu 麓鳩</a></p>
@@ -437,7 +437,7 @@
                                     <h3 class="text-uppercase">萬華-板橋</h2>
                                     <p class="item-intro text-muted">捷運西門站-捷運府中站</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/03thum.jpeg" alt="..." />
-                                    <p>本月精選 - Cafe Noote</p>
+                                    <p>本月精選 - Cafe Noote（江子翠站）</p>
                                     <div>
                                     <h4>西門站</h4>
                                     <p>  <a href="shang.html" target="_parent">上上咖啡</a></p>
@@ -490,8 +490,8 @@
                                     <!-- Project Details Go Here-->
                                     <h3 class="text-uppercase">板橋-土城</h2>
                                     <p class="item-intro text-muted">捷運亞東醫院站-捷運頂埔站</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/---.jpg" alt="..." />
-                                    <p>本月精選 - Antler Park 路角公園</p>
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/03thum.jpeg" alt="..." />
+                                    <p>本月精選 - Antler Park 路角公園（土城站）</p>
                                     <div>
                                     <h4>亞東醫院站</h4>
                                     <p>努力開發中...</p>
@@ -510,7 +510,7 @@
                                     </div>
                                     <div>
                                     <h4>頂埔站</h4>
-                                    <p>開發中...</p>
+                                    <p>努力開發中...</p>
                                     </div>
                                     </div>
                                     
