--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         </nav>
         <!-- Masthead-->
         <header class="masthead">
+                <div>
                 <div class="masthead-heading text-uppercase">Blue Cafe</div>
                 <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#about">Learn more</a>
             </div>
