--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
         </nav>
         <!-- Masthead-->
         <header class="masthead">
-                <div align="left>
-                <div class="masthead-heading text-uppercase">Blue Cafe</div>
+            <div class="container">
                 <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#about">Learn more</a>
             </div>
         </header>
