--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
+                <div class="masthead-heading text-uppercase">Blue Cafe</div>
                 <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#about">Learn more</a>
             </div>
         </header>
