--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-bars fa-stack-1x fa-inverse"></i>
+                            <i class="fas fa-subway fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">Theme</h4>
+                        <h4 class="my-3">Goal</h4>
                         <p class="text-muted">整理了板南線捷運站周邊的咖啡廳，讓沒有交通工具的你也能享受到咖啡廳的美好！</p>
                     </div>
                     <div class="col-md-4">
@@ -63,15 +63,15 @@
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-sort fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">Choice</h4>
-                        <p class="text-muted">分成四大類型，可以輕鬆找到符合需求的店家，無論是有工作、娛樂等需求的，這裡都能滿足你。</p>
+                        <h4 class="my-3">category</h4>
+                        <p class="text-muted">分成五大類型，可以輕鬆找到符合需求的店家，無論是有工作、娛樂等需求的，這裡都能滿足你。</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-hashtag fa-stack-1x fa-inverse"></i>
+                            <i class="fas fa-highlighter fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">Hashtag</h4>
+                        <h4 class="my-3">Remark</h4>
                         <p class="text-muted">客製化資訊：將店家提供的服務內容及特色標記在網頁最上方。</p>
                     </div>
                 </div>
