--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>北捷板南線特色咖啡廳巡禮</title>
+        <title>捷運板南線特色咖啡廳懶人包</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.png" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
@@ -38,7 +38,7 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-heading text-uppercase">Blue Cafe</div>
+                <div class="masthead-heading text-uppercase">捷運板南線特色咖啡廳懶人包</div>
                 <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#about">Learn more</a>
             </div>
         </header>
