--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
+                <div class="masthead-heading text-uppercase">Bannan Line Cafe</div>
                 <div class="masthead-heading text-uppercase">捷運板南線特色咖啡廳懶人包</div>
                 <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#about">Learn more</a>
             </div>
