--- a/11cafe.html
+++ b/11cafe.html
@@ -73,14 +73,21 @@
                         </div>
                     </div>
              </section>
+             <div class="text-center">
+                    <h4>About us</h4>
+                    <p> <mark class="gray">是一間有提供商業午餐、不收服務費的寵物友善餐廳，店內有許多貓咪擺飾讓身為貓奴的我十分著迷。餐點強調是餐廳自己調配製作、而非半成品加工，像是義大利麵醬是自己熬煮，肉丸也是手工製成的唷！</mark>
+                    </br>
+                    
+                    </br>
+                </div>
+                
                    <div class="text-center">
                            <p>地址：台北市信義區忠孝東路四段553巷12號</p>
                            <p>電話：(02)8787-5891</p>
-                           <p>營業時間：星期二~星期五 11:30~21:00、星期六~星期日 10:30~21:00</p>
+                           <p>營業時間：週一至週五 11:30~21:00  週六至週日 10:30-21:00</p>
                            <p>菜單：<a href="https://www.facebook.com/11Cafe/photos/p.3688281737934089/3688281737934089" target="_blank">LINK</a></p>
                            <p>服務費：不收服務費</p>
-                           <p>ine點餐服務帳號｜@jei6228l（最後一個字是小寫L)
                            <p>粉絲團：<a href="https://www.facebook.com/11Cafe" target="_blank">LINK</a></p>
-                           <p>交通：捷運市政府站1號出口步行約5分鐘即可抵達，鄰近公車站牌為聯合報、松山高中</p>
+                           <p>交通：捷運市政府站1號出口步行約五分鐘，鄰近公車站牌為聯合報、松山高中</p>
                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3614.749849032775!2d121.56069431446664!3d25.04256198396832!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442abb92b2135d1%3A0x6f03f0aea40b892e!2zMTEw5Y-w5YyX5biC5L-h576p5Y2A5b-g5a2d5p2x6Lev5Zub5q61NTUz5be3MTLomZ8!5e0!3m2!1szh-TW!2stw!4v1621844770163!5m2!1szh-TW!2stw" width="400" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                     </div>
