--- a/11cafe.html
+++ b/11cafe.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="text-center">
                     <p> <mark class="yellow">＃寵物友善餐廳</mark>  <mark class="yellow">＃創意義大利麵</mark>   <mark class="yellow">＃精緻早午餐</mark></p>
-                    <p> <mark class="yellow">＃免費wifi</mark>  <mark class="yellow">提供插座</mark>   <mark class="yellow">＃眯眼小貓陪吃</mark></p>
+                    <p> <mark class="yellow">＃免費wifi</mark>  <mark class="yellow">提供插座</mark>   <mark class="yellow">＃適合朋友聚會</mark></p>
                     <p> <mark class="blue">Covid-19專區：5/24起，提供外帶自取全面7折優惠，內用座位暫不開放</mark>
                 </div>
                 <section class="page-section bg-light" id="portfolio">
@@ -55,7 +55,7 @@
                                 <img class="img-fluid" src="assets/img/store/11_2.jpeg" alt="11_2" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">巴東咖哩牛肉蛋奶麵</div>
+                                <div class="portfolio-caption-subheading text-muted">巴東咖哩牛肉蛋奶麵 $270</div>
                             </div>
                         </div>
                     </div>
@@ -68,7 +68,7 @@
                                 <img class="img-fluid" src="assets/img/store/11_3.jpeg" alt="11_3" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">草莓優格冰沙</div>
+                                <div class="portfolio-caption-subheading text-muted">草莓優格冰沙 $170</div>
                             </div>
                         </div>
                     </div>
