--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             <i class="fas fa-sort fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">category</h4>
-                        <p class="text-muted">分成五大類型，可以輕鬆找到符合需求的店家，無論是有工作、娛樂等需求的，這裡都能滿足你。</p>
+                        <p class="text-muted">分成五大類型，可以輕鬆找到符合需求的店家：不限時唸書/聚會/拍照打卡/或只是想好好品嚐一杯咖啡的，這裡都能滿足你。</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -174,6 +174,7 @@
                             </div>
                             <div class="timeline-body"><p class="text-muted">
                             <p>  南港站 <a href="coppii.html" target="_parent">Coppii Lumii Living Coffee</a></p>
+                            <p>  市政府站 <a href="11cafe.html" target="_parent">11 Cafe'</a></p>
                             <p>  土城站 <a href="antler.html" target="_parent">Antler Park 路角公園</a></p>
                             </p></div>
                         </div>
