--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-subway fa-lisr-ol fa-inverse"></i>
+                            <i class="fas fa-subway fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Goal</h4>
                         <p class="text-muted">整理了板南線捷運站周邊的咖啡廳，讓沒有交通工具的你也能享受到咖啡廳的美好！</p>
@@ -62,7 +62,7 @@
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-sort fa-stack-1x fa-inverse"></i>
+                            <i class="fas fa-list-ol fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Style</h4>
                         <p class="text-muted">分成五大風格類型，可以輕鬆找到符合需求的店家：不限時唸書/聚會/拍照打卡/或只是想好好品嚐一杯咖啡的，這裡都能滿足你。</p>
