--- a/backmount.html
+++ b/backmount.html
@@ -86,7 +86,7 @@
                            <p>菜單：<a href="https://www.facebook.com/backmount.coffee.food/menu/?ref=page_internal" target="_blank">LINK</a></p>
                            <p>服務費：不收服務費</p>
                            <p>粉絲團：<a href="https://www.facebook.com/backmount.coffee.food/" target="_blank">LINK</a></p>
-                           <p>交通：捷運搭到後山埤步行約15分鐘，或轉公車，搭藍22到南港花園社區二</p>
+                           <p>交通：捷運昆陽站步行約十分鐘，或轉公車，搭藍22到南港花園社區二</p>
                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3614.8392950633274!2d121.58962771441576!3d25.03952728396976!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442ab0d1efb8317%3A0x6f0ce6c8f5e84!2zMTE15Y-w5YyX5biC5Y2X5riv5Y2A56aP5b636KGXMzcz5be3MjPomZ8!5e0!3m2!1szh-TW!2stw!4v1623500485066!5m2!1szh-TW!2stw" width="400" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                            </br>
                            
