--- a/index.html
+++ b/index.html
@@ -162,7 +162,8 @@
                             </div>
                             <div class="timeline-body"><p class="text-muted">
                             <p>  市政府站 <a href="arthere.html" target="_parent">Arthere Cafe' 上樓看看</a></p>
-                            <p>  忠孝復興站 <a href="boven.html" target="_parent">CBoven Cafe 雜誌圖書館</a></p>
+                            <p>  忠孝復興站 <a href="boven.html" target="_parent">Boven Cafe 雜誌圖書館</a></p>
+                            <p>  忠孝復興站 <a href="dreamers.html" target="_parent">Dreamers Coffee Roasters</a></p>
                             </p></div>
                         </div>
                     </li>
@@ -187,7 +188,9 @@
                             </div>
                             <div class="timeline-body"><p class="text-muted">
                             <p>  昆陽站 <a href="backmount.html" target="_parent">Back Mount 後山咖啡</a></p>
+                            <p>  忠孝敦化站 <a href="lost.html" target="_parent">Lost and Found it cafe 失物招領咖啡館</a></p>
                             <p>  江子翠站 <a href="koya.html" target="_parent">Koya Cafe</a></p>
+                            <p>  新埔站 <a href="camulet.html" target="_parent">Camulet 貓欸</a></p>
                             </p></div>
                         </div>
                     </li>
@@ -200,6 +203,7 @@
                             <div class="timeline-body"><p class="text-muted">
                             <p>  昆陽站 <a href="unclestwo.html" target="_parent">Uncles Two 兩位大叔</a></p>
                             <p>  國父紀念館站 <a href="drunk.html" target="_parent">Drunk Cafe 爛醉咖啡</a></p>
+                            <p>  江子翠站 <a href="noote.html" target="_parent">Cafe Noote</a></p>
                             <p>  海山站 <a href="sdessert.html" target="_parent">S'Dessert BAR</a></p>
                             </div>
                         </div>
