--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
                             <div class="timeline-body"><p class="text-muted">
                             <p>  南港站 <a href="coppii.html" target="_parent">Coppii Lumii Living Coffee</a></p>
                             <p>  市政府站 <a href="11cafe.html" target="_parent">11 Cafe'</a></p>
+                            <p>  市政府站 <a href="gingin.html" target="_parent">GinGin Coffee Company</a></p>
                             <p>  土城站 <a href="antler.html" target="_parent">Antler Park 路角公園</a></p>
                             </p></div>
                         </div>
@@ -188,7 +189,7 @@
                             </div>
                             <div class="timeline-body"><p class="text-muted">
                             <p>  昆陽站 <a href="backmount.html" target="_parent">Back Mount 後山咖啡</a></p>
-                            <p>  忠孝敦化站 <a href="lost.html" target="_parent">Lost and Found it cafe 失物招領咖啡館</a></p>
+                            <p>  忠孝敦化站 <a href="lost.html" target="_parent">失物招領咖啡館</a></p>
                             <p>  江子翠站 <a href="koya.html" target="_parent">Koya Cafe</a></p>
                             <p>  新埔站 <a href="camulet.html" target="_parent">Camulet 貓欸</a></p>
                             </p></div>
