--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                             <div class="timeline-body"><p class="text-muted">
                             <p>  南港站 <a href="coppii.html" target="_parent">Coppii Lumii Living Coffee</a></p>
                             <p>  市政府站 <a href="11cafe.html" target="_parent">11 Cafe'</a></p>
-                            <p>  市政府站 <a href="gingin.html" target="_parent">GinGin Coffee Company</a></p>
+                            <p>  忠孝新生站 <a href="gingin.html" target="_parent">GinGin Coffee Company</a></p>
                             <p>  土城站 <a href="antler.html" target="_parent">Antler Park 路角公園</a></p>
                             </p></div>
                         </div>
@@ -263,11 +263,6 @@
                         <script>
                             document.write(new Date().getFullYear());
                         </script>
-                    
-                    <div class="col-lg-4 text-lg-right">
-                        <a class="mr-3" href="#!">Privacy Policy</a>
-                        <a href="#!">Terms of Use</a>
-                    </div>
                 </div>
             </div>
         </footer>
